--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -19,3 +19,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.carousel__prev,
+.carousel__next {
+  box-sizing: content-box;
+  border: 5px solid white;
+  background-color: $mainRed;
+}
